--- a/css/slides.css
+++ b/css/slides.css
@@ -6735,9 +6735,9 @@ form input[type="email"].input-13 {
   }
 }
 @media (min-width: 768px) {
-  .iphone-29 {
-    margin-top: -228px;
-    margin-bottom: -228px;
+  .chef-photo {
+    margin-top: -100px;
+    margin-bottom: -250px;
   }
 }
 @media (max-width: 767px) {
