--- a/css/slides.css
+++ b/css/slides.css
@@ -355,20 +355,25 @@ small .small {
   border-radius: 4px;
   padding: 16px 24px 17px;
   color: #fff;
+
+  font-family: "Roboto-Black", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.2em !important;
+
+
   border: none;
   outline: none;
   text-decoration: none;
   background: #202020;
   font-size: 16px;
-  font-weight: 500;
+
   text-align: center;
   vertical-align: top;
   cursor: pointer;
   overflow: hidden;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  letter-spacing: normal !important;
-  position: relative;
+    position: relative;
   white-space: nowrap;
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
@@ -958,18 +963,18 @@ p.uppercase, .p.uppercase,
   font-family: inherit;
   background-color: #fff;
   position: relative;
-  background: #fff;
+  background: #272727;
   padding: 15px 16px 16px;
   border: none;
   font-size: 16px;
-  color: #242424;
+  color: #fff;
   outline: none;
   border-radius: 4px;
   width: 100%;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.05);
   transition: 0.15s;
 }
 .slides-form input[type="text"].flat, .slides-form input[type="text"]:focus,
@@ -1007,7 +1012,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]:focus,
 .slides-form textarea:focus,
 .slides-form select:focus {
-  border-color: #2196F3;
+  border-color: #FFD63E;
   z-index: 10;
 }
 .slides-form input[type="text"]:focus::-webkit-input-placeholder,
@@ -1018,7 +1023,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]:focus::-webkit-input-placeholder,
 .slides-form textarea:focus::-webkit-input-placeholder,
 .slides-form select:focus::-webkit-input-placeholder {
-  color: #242424;
+  color: rgba(255, 255, 255, 0.40);
   font-weight: 400;
   opacity: 0;
 }
@@ -1030,7 +1035,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]:focus:-moz-placeholder,
 .slides-form textarea:focus:-moz-placeholder,
 .slides-form select:focus:-moz-placeholder {
-  color: #242424;
+  color: rgba(255, 255, 255, 0.40);
   font-weight: 400;
   opacity: 0;
 }
@@ -1042,7 +1047,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]:focus::-moz-placeholder,
 .slides-form textarea:focus::-moz-placeholder,
 .slides-form select:focus::-moz-placeholder {
-  color: #242424;
+  color: rgba(255, 255, 255, 0.40);
   font-weight: 400;
   opacity: 0;
 }
@@ -1054,7 +1059,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]:focus:-ms-input-placeholder,
 .slides-form textarea:focus:-ms-input-placeholder,
 .slides-form select:focus:-ms-input-placeholder {
-  color: #242424;
+  color: rgba(255, 255, 255, 0.40);
   font-weight: 400;
   opacity: 0;
 }
@@ -1116,7 +1121,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]::-webkit-input-placeholder,
 .slides-form textarea::-webkit-input-placeholder,
 .slides-form select::-webkit-input-placeholder {
-  color: #242424;
+  color: rgba(255, 255, 255, 0.40);
   font-weight: 400;
   opacity: 0.5;
 }
@@ -1128,7 +1133,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]:-moz-placeholder,
 .slides-form textarea:-moz-placeholder,
 .slides-form select:-moz-placeholder {
-  color: #242424;
+  color: rgba(255, 255, 255, 0.40);
   font-weight: 400;
   opacity: 0.5;
 }
@@ -1140,7 +1145,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]::-moz-placeholder,
 .slides-form textarea::-moz-placeholder,
 .slides-form select::-moz-placeholder {
-  color: #242424;
+  color: rgba(255, 255, 255, 0.40);
   font-weight: 400;
   opacity: 0.5;
 }
@@ -1152,7 +1157,7 @@ p.uppercase, .p.uppercase,
 .slides-form input[type="number"]:-ms-input-placeholder,
 .slides-form textarea:-ms-input-placeholder,
 .slides-form select:-ms-input-placeholder {
-  color: #242424;
+  color: rgba(255, 255, 255, 0.40);
   font-weight: 400;
   opacity: 0.5;
 }
@@ -1360,7 +1365,7 @@ p.uppercase, .p.uppercase,
 }
 .container .wrap:not(.noSpaces), .container .wrap.spaceWrap,
 .container .wrap .spaceWrap {
-  padding: 120px calc(8% + 15px);
+  padding: 140px calc(8% + 15px);
 }
 .container .wrap .overflowHidden {
   overflow: hidden;
@@ -1575,9 +1580,9 @@ html:not(.mobile) .slide.video .background[style] {
 
 .pad {
   border-radius: 6px;
-  padding: 10%;
-  color: #202020;
-  background: #fff;
+  padding: 6% 10% 8%;
+  color: #fff;
+  background: #1E1E1E;
   overflow: hidden;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -5324,7 +5329,7 @@ body {
 }
 
 .yellow {
-  background: #FFEB3B !important;
+  background: #FFD63E !important;
   color: #202020 !important;
 }
 .yellow svg {
@@ -6856,7 +6861,7 @@ p.remind-43 {
 }
 
 .form-55 {
-  max-width: 500px;
+  max-width: 550px;
   margin: 0 auto;
 }
 @media (min-width: 1024px) {
